Added captions to index pages
Added captions to the home, coursework, and portfolio header images.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ header:
   overlay_color: "#000"
   overlay_filter: "0"
   overlay_image: /assets/images/splash-images/sendoff-spring-extended.png
+  caption: "[__Sendoff Spring__](https://bulbapedia.bulbagarden.net/wiki/Sendoff_Spring) in Sinnoh"
 title: "Ozaner's Notes"
 excerpt: "A compilation of notes on math, computer science, philosophy, and other topics."
 classes: wide
@@ -53,5 +54,3 @@ feature_row:
 {% endfor %}
 
 {% include paginator.html %} -->
-
-<!-- #   caption: "[__Sendoff Spring__](https://bulbapedia.bulbagarden.net/wiki/Sendoff_Spring) in Sinnoh" -->
