Renamed Boolean Logic with Matrices Post
Renamed "Expressing Boolean Logic in Linear Algebra" post to "Expressing Boolean Logic with Matrices".
- Adjusted home page featured post title
- Created legacy permalink to previous name

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ feature_row:
     image_path: assets/images/math/juliacos.png
     alt: "dottie"
 
-  - title: "Expressing Boolean Logic in Linear Algebra"
+  - title: "Expressing Boolean Logic with Matrices"
     excerpt: "How to express and compute boolean logic in terms of matrix algebra."
-    url: "/boolean-logic-in-linear-algebra/"
+    url: "/boolean-logic-with-matrices/"
     btn_label: "Read More"
     btn_class: "btn--inverse"
     image_path: assets/images/comp_sci/and-or-matrix.png
